kub/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      service: database
  template:
    metadata:
      labels:
        service: database
    spec:
      containers:
      - name: database
        image: postgres
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: postgres-volume-mount
          mountPath: /data/postgres

      volumes:
      - name: postgres-volume-mount
        persistentVolumeClaim:
          claimName: postgres-pvc
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    service: database
spec:
  selector:
    service: database
  type: ClusterIP
  ports:
  - port: 5432
