kub/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: abdelrahmankh/relate
        imagePullPolicy: IfNotPresent
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "sleep 1000"]
          
      restartPolicy: Always
       

---
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    service: django
spec:
  selector:
    app: django
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
